# qtail

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  icons.qrc  icyfiremodel.cpp  icyfiremodel.h  logleveldelegate.cpp  logleveldelegate.h  logmodel.cpp  logmodel.h  logproxymodel.cpp  logproxymodel.h  logwindow.cpp  logwindow.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtail_zh_CN.ts  resource.rc.in  stable.h
